--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
-    "**Copyright:** 2022 EUMETSAT <br>\n",
+    "**Copyright:** 2023 EUMETSAT <br>\n",
     "**License:** MIT <br>\n",
-    "**Authors:** <a href=\"mailto:copernicus.training@eumetsat.int\" target=\"_blank\">Dr Ben Loveday (EUMETSAT/Innoflair UG)</a>, Dr Hayley Evers-King (EUMETSAT), Dr Marie Smith (CSIR)"
+    "**Authors:** Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT), Marie Smith (CSIR)"
    ]
   },
   {
@@ -556,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
