--- a/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
-    "**Copyright:** 2022 EUMETSAT <br>\n",
+    "**Copyright:** 2023 EUMETSAT <br>\n",
     "**License:** MIT <br>\n",
-    "**Authors:** <a href=\"mailto:copernicus.training@eumetsat.int\" target=\"_blank\">Ben Loveday (EUMETSAT/Innoflair UG)</a>, Hayley Evers-King (EUMETSAT), Vinca Rosmorduc (CLS)"
+    "**Authors:** Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT), Vinca Rosmorduc (CLS)"
    ]
   },
   {
@@ -10206,7 +10206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
