--- a/Index.ipynb
+++ b/Index.ipynb
@@ -14,8 +14,9 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
-    "**Copyright:** 2022 EUMETSAT <br>\n",
-    "**License:** MIT <br>"
+    "**Copyright:** 2023 EUMETSAT <br>\n",
+    "**License:** MIT <br>\n",
+    "**Authors:** Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT), Vinca Rosmorduc (CLS), Marie Smith (CSIR)"
    ]
   },
   {
@@ -148,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
