--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,5 +1,6 @@
 # Copyright holder
-EUMETSAT
+copyright: 2023 EUMETSAT
+license: LICENSE.txt
  
 # List of development authors
 Ben Loveday (Innoflair UG)
