--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "</div>\n",
     "    \n",
-    " 1. [Acquiring SLSTR data from the Copernicus Marine Service (CMEMS)](#section1)\n",
+    " 1. [Acquiring SLSTR data via the WEkEO HDA adaptor](#section1)\n",
     " 1. [Plotting SLSTR data spatially](#section2)\n",
     " 1. [Downloading OSTIA SST data from the Copernicus Marine Service (CMEMS)](#section3)\n",
     " 1. [Preparing the OSTIA data](#section4)\n",
@@ -292,7 +292,7 @@
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='section1'></a>1. Acquiring SLSTR data from the Copernicus Marine Service (CMEMS)]\n",
+    "## <a id='section1'></a>1. Acquiring SLSTR data via the WEkEO HDA adaptor\n",
     "[Back to top](#TOC_TOP)\n",
     "\n",
     "</div>"
