updates to heatwave notebook

--- a/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
@@ -10256,6 +10256,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For comparison, below is the video generated for our case study.\n",
+    "<hr>\n",
+    "\n",
+    "<video id=\"example_HINNAMNOR\" class=\"video-js vjs-default-skin\" width=\"100%\" src=\"SWH_animation_HINNAMNOR.mp4\" type='video/mp4' controls autoplay />\n",
+    "</video>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<hr>\n",
     "<a href=\"../../../Index.ipynb\"><< Index</a>\n",
     "<hr>\n",
