--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -3,12 +3,15 @@ copyright: 2023 EUMETSAT
 license: LICENSE.txt
  
 # List of development authors
-Ben Loveday (Innoflair UG)
+Ben Loveday (Innoflair UG / EUMETSAT)
 Hayley Evers-King (EUMETSAT)
 Aida Alvera-Azcarate (GHER)
 Charles Troupin (GHER)
 Vinca Rosmorduc (CLS)
 Arthur Capet (GHER)
+Valters Zeizis (Innoflair UG / EUMETSAT)
+Noemi Marsico (Innoflair UG / EUMETSAT)
+Guillaume Aubert (EUMETSAT)
 
 # List of contributory authors
 Marie Smith (CSIR); Challenge03_sustainable_food
