--- a/Index.ipynb
+++ b/Index.ipynb
@@ -16,7 +16,7 @@
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
     "**Copyright:** 2023 EUMETSAT <br>\n",
     "**License:** MIT <br>\n",
-    "**Authors:** Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT), Vinca Rosmorduc (CLS), Marie Smith (CSIR)"
+    "**Authors:** Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT), Vinca Rosmorduc (CLS), Marie Smith (CSIR), Noemi Marsico (EUMETSAT/Innoflair UG), Guillaume Aubert (EUMETSAT), Valters Zeizis (EUMETSAT/Innoflair UG)"
    ]
   },
   {
