--- a/Index.ipynb
+++ b/Index.ipynb
@@ -123,9 +123,9 @@
     "  <br><br>\n",
     "\n",
     "2. **Thematic**\n",
-    "  * Biophysical interactions in the Agulhas Current: Coming soon *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>, <font color=\"#C0392B\">**SLSTR**</font> and <font color=\"#8E44AD\">**SRAL**</font>)*\n",
-    "<br><br>\n",
-    "\n"
+    "  * [Linking land topography with winds and altimetry derived winds and significant wave height](./Case_studies/Thematic/Altimetry_swh_topography/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL**</font>)*\n",
+    "   * Biophysical interactions in the Agulhas Current: Coming soon *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>, <font color=\"#C0392B\">**SLSTR**</font> and <font color=\"#8E44AD\">**SRAL**</font>)*\n",
+    "<br><br>"
    ]
   },
   {
