metadata small updates

--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='TOC_TOP'></a>Contents\n",
+    "## <a id='TOC-TOP'></a>Contents\n",
     "\n",
     "</div>\n",
     "    \n",
@@ -231,7 +231,7 @@
     "<div class=\"alert alert-warning\" role=\"alert\">\n",
     "\n",
     "## <a id='section0'></a>0. Supporting functions\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -297,7 +297,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section1'></a>1. Acquiring SLSTR data via the WEkEO HDA adaptor\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -465,7 +465,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section2'></a>2. Plotting SLSTR data spatially\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -557,7 +557,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section3'></a>3. Downloading OSTIA SST data from the Copernicus Marine Service (CMEMS)\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -638,7 +638,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section4'></a>4. Preparing the OSTIA data\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -669,7 +669,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section5'></a>5. Making SST-based climate stripes\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -742,7 +742,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section6'></a>6. Testing for marine heatwaves\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
