--- a/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='TOC_TOP'></a>Contents\n",
+    "## <a id='TOC-TOP'></a>Contents\n",
     "\n",
     "</div>\n",
     "    \n",
@@ -162,7 +162,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section1'></a>1. Setting our parameters\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -361,7 +361,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section2'></a>2. Reading IBTrACS hurricane data\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -9446,7 +9446,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section3'></a>3. Acquiring SRAL data from the EUMETSAT Data Store\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -9768,7 +9768,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section4'></a>4. Gathering SWH data\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -9882,7 +9882,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section5'></a>5. Plotting SWH images\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -11514,7 +11514,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section6'></a>6. Generating the animation\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -11587,7 +11587,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section7'></a>7. Playing the animation\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
