--- a/Index.ipynb
+++ b/Index.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='TOC_TOP'></a>Contents\n",
+    "## <a id='TOC-TOP'></a>Contents\n",
     "\n",
     "</div>\n",
     "\n",
