--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='TOC_TOP'></a>Contents\n",
+    "## <a id='TOC-TOP'></a>Contents\n",
     "\n",
     "</div>\n",
     "    \n",
@@ -146,7 +146,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section1'></a>1. Acquiring OLCI data\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -356,7 +356,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section2'></a>2. Reading OLCI reflectance data\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
@@ -458,7 +458,7 @@
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
     "## <a id='section3'></a>3. Plotting OLCI data\n",
-    "[Back to top](#TOC_TOP)\n",
+    "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
    ]
