--- a/Index.ipynb
+++ b/Index.ipynb
@@ -54,8 +54,10 @@
     "\n",
     "### Module outline\n",
     "\n",
-    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors and/or how to use their data \n",
-    "in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>. The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
+    "Welcome to the **ocean-case-studies** module. This repository consists of a series of Jupyter Notebooks that either reflect one or more facets of a marine case study, as published on the EUMETSAT website, or focusses on a specific ocean region or oceanographic phenomenon. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors and/or how to use their data \n",
+    "in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>.\n",
+    "\n",
+    "The list of case studies is every-growing and the Copernicus Marine Training Service aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
     "\n",
     "Case studies that align with the UN Ocean Decade priorities are organised according to the challenge they respond to. The list of challenges is below;\n",
     "\n",
@@ -77,9 +79,11 @@
     "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's <a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\n",
     "\" target=\"_blank\">**README**</a> for further information on how to set up Jupyter.\n",
     "\n",
-    "This module is split into four parts, focussed on:\n",
+    "This module is split into two parts, focussed on:\n",
     "* Case studies that are relevant to the <font color=\"#3498DB\">**UN Ocean Decade**</font>, challenges.\n",
-    "* Case studies that are focus on the **thematic** use of <font color=\"#1E8449\">**Ocean Colour**</font>, <font color=\"#C0392B\">**Thermal radiometry**</font> and <font color=\"#8E44AD\">**Altimetry**</font> applications.\n",
+    "* Case studies that are focus on the <font color=\"#1F618D\">**oceanographic phenomena**</font>.\n",
+    "\n",
+    "In both cases, we use a mix of <font color=\"#1E8449\">**Ocean Colour**</font>, <font color=\"#C0392B\">**Thermal radiometry**</font> and <font color=\"#8E44AD\">**Altimetry**</font> data sets. The sources and types used are colour coded in the the menu below. \n",
     "\n",
     "There is no suggested order in which to access the notebooks, but pre-requisites where applicable are listed at the top of each notebook. Not all notebooks may be relevant for every user, so we have tried to make each one as self contained as possible.\n",
     "\n",
@@ -111,20 +115,24 @@
     "\n",
     "1. <font color=\"#3498DB\">**UN Ocean Decade**</font>\n",
     "  * Challenge 01: coming soon\n",
-    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA**</font>)*\n",
-    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>)*\n",
+    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "  * Challenge 04: Coming soon\n",
-    "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>)*\n",
-    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL / Sentinel-6**</font>)*\n",
+    "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
+    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
     "  * Challenge 07: Coming soon\n",
     "  * Challenge 08: Coming soon\n",
     "  * Challenge 09: Coming soon\n",
     "  * Challenge 10: Coming soon\n",
     "  <br><br>\n",
     "\n",
-    "2. **Thematic**\n",
-    "  * [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Thematic/Altimetry_swh_topography/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL**</font>)*\n",
-    "   * Biophysical interactions in the Agulhas Current: Coming soon *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>, <font color=\"#C0392B\">**SLSTR**</font> and <font color=\"#8E44AD\">**SRAL**</font>)*\n",
+    "2. <font color=\"#1F618D\">**Oceanographic phenomena**</font>\n",
+    "  * [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Altimetry_swh_topography/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
+    "   * [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*\n",
+    "   * [SST anomalies in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies/Atlantic_Med_SST_anomalies.ipynb)\n",
+    "   \n",
+    "   *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "   * Marine heatwaves in 2023: Coming soon *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*   \n",
     "<br><br>"
    ]
   },
