--- a/Index.ipynb
+++ b/Index.ipynb
@@ -129,10 +129,8 @@
     "2. <font color=\"#1F618D\">**Oceanographic phenomena**</font>\n",
     "  * [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Altimetry_swh_topography/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
     "   * [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*\n",
-    "   * [SST anomalies in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies/Atlantic_Med_SST_anomalies.ipynb)\n",
-    "   \n",
-    "   *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
-    "   * Marine heatwaves in 2023: Coming soon *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*   \n",
+    "   * [SST anomalies in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "   * [Marine heatwaves in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
     "<br><br>"
    ]
   },
