--- a/Index.ipynb
+++ b/Index.ipynb
@@ -94,6 +94,7 @@
     "Very broadly, from this module, you can expect to learn:\n",
     "* How to use multiple remote-sensing based data sets to address the UN ocean decade challenges\n",
     "* How to work with the Copernicus marine data streams from Sentinel-3 and Sentinel-6\n",
+    "* How to contextualise satellite data with products from different levels (e.g. Level-1B to Level-4)\n",
     "* How to combine Earth observation data with *in situ* measurements and model simulations\n",
     "\n",
     "Each notebook contains more specific information on its expected learning outcomes.\n",
@@ -115,22 +116,22 @@
     "\n",
     "1. <font color=\"#3498DB\">**UN Ocean Decade**</font>\n",
     "  * Challenge 01: coming soon\n",
-    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
-    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
+    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela/Deoxygenation_impacts_marine_life_benguela.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "  * Challenge 04: Coming soon\n",
-    "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
-    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
-    "  * Challenge 07: Coming soon\n",
-    "  * Challenge 08: Coming soon\n",
-    "  * Challenge 09: Coming soon\n",
-    "  * Challenge 10: Coming soon\n",
-    "  <br><br>\n",
+    "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
+    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
+    "* [Challenge 07: Quantifying sea level rise with Sentinel-6](./Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sealevel_rise_with_S6/Quantifying_sealevel_rise_with_S6.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
+    "* Challenge 08: Coming soon\n",
+    "* Challenge 09: Coming soon\n",
+    "* Challenge 10: Coming soon\n",
+    "<br><br>\n",
     "\n",
     "2. <font color=\"#1F618D\">**Oceanographic phenomena**</font>\n",
-    "  * [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Altimetry_swh_topography/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
-    "   * [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*\n",
-    "   * [SST anomalies in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
-    "   * [Marine heatwaves in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "  * [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Linking_land_topography_with_altimetry_swh/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
+    "   * [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*\n",
+    "   * [SST anomalies in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_2023/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "   * [Marine heatwaves in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_MHW_2023/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
     "<br><br>"
    ]
   },
