--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "The WEkEO HDA client accepts requests as JSON queries. These have a specific format, which may look complex, but you can build on the examples you can find in the GUI, available under the **Show API request** button;\n",
     "\n",
-    "<img src='../../../img/WEkEO_show_api_SLSTR.png' align='centre' width='75%'></img>"
+    "<img src='../../../../img/WEkEO_show_api_SLSTR.png' align='centre' width='75%'></img>"
    ]
   },
   {
