--- a/Index.ipynb
+++ b/Index.ipynb
@@ -120,8 +120,8 @@
     "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela/Deoxygenation_impacts_marine_life_benguela.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "  * Challenge 04: Coming soon\n",
     "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
-    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
-    "* [Challenge 07: Quantifying sea level rise with Sentinel-6](./Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sealevel_rise_with_S6/Quantifying_sealevel_rise_with_S6.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
+    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry & Sentinel-6 altimetry**</font>)*\n",
+    "* [Challenge 07: Quantifying sea level rise with Sentinel-6](./Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sealevel_rise_with_S6/Quantifying_sealevel_rise_with_S6.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry & Sentinel-6 altimetry**</font>)*\n",
     "* Challenge 08: Coming soon\n",
     "* Challenge 09: Coming soon\n",
     "* Challenge 10: Coming soon\n",
@@ -129,9 +129,10 @@
     "\n",
     "2. <font color=\"#1F618D\">**Oceanographic phenomena**</font>\n",
     "  * [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Linking_land_topography_with_altimetry_swh/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
-    "   * [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*\n",
+    "   * [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*\n",
     "   * [SST anomalies in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_2023/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
     "   * [Marine heatwaves in North Atlantic and Mediterranean in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_MHW_2023/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "   * [Mesoscale variability in the Alboran Gyre](./Case_studies/Ocean_phenomena/Mesoscale_variability/Mesoscale_variability_in_the_Alboran_Gyre/Mesoscale_variability_in_the_Alboran_Gyre.ipynb) (<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR SST**</font>)\n",
     "<br><br>"
    ]
   },
