--- a/Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb
+++ b/Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb
@@ -65,7 +65,7 @@
     "- **<a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-sral\" target=\"_blank\">Learn SRAL (EUMETSAT Gitlab)</a>**\n",
     "    \n",
     "For more contextual information, users should refer to the following case study where the image we generate here is published:\n",
-    "- **<a href=\"https://www.eumetsat.int/biophysical-interactions-in-the-agulhas-current\" target=\"_blank\">Biophysical interactions in the Agulhas Current</a>** \n",
+    "- **<a href=\"https://www.eumetsat.int/Agulhas_variabilty_biophysical_interactions\" target=\"_blank\">Variability and biophysical interactions in the Agulhas Current</a>** \n",
     "\n",
     "</div>\n",
     "<hr>"
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Biophysical interactions in the Agulhas Current\n",
+    "# Variability and biophysical interactions in the Agulhas Current\n",
     "\n",
     "### Data used\n",
     "\n",
@@ -84,6 +84,9 @@
     "| Sentinel-3 OLCI level-2 full resolution | EO:EUM:DAT:0407 | <a href=\"https://navigator.eumetsat.int/product/EO:EUM:DAT:SENTINEL-3:OL_2_WFR___NTC?query=OLCI&filter=satellite__Sentinel-3&filter=instrument__OLCI&filter=processingLevel__Level%202%20Data&s=advanced\" target=\"_blank\">link</a> | EO:EUM:DAT:SENTINEL-3:OL_2_WFR___ | <a href=\"https://www.wekeo.eu/data?view=dataset&dataset=EO%3AEUM%3ADAT%3ASENTINEL-3%3AOL_1_EFR___\" target=\"_blank\">link</a> |\n",
     "| Sentinel-3 SLSTR level-2 | EO:EUM:DAT:0412 | <a href=\"https://navigator.eumetsat.int/product/EO:EUM:DAT:SENTINEL-3:SL_2_SST?query=SLSTR&s=advanced\" target=\"_blank\">link</a> | EO:EUM:DAT:SENTINEL-3:SL_2_WST___ | <a href=\"https://www.wekeo.eu/data?view=dataset&dataset=EO%3AEUM%3ADAT%3ASENTINEL-3%3ASL_2_WST___&initial=1\" target=\"_blank\">link</a> |\n",
     "| Sentinel-3 SRAL level-2 | EO:EUM:DAT:0415 | <a href=\"https://navigator.eumetsat.int/product/EO:EUM:DAT:SENTINEL-3:SR_2_WAT___NTC?query=SRAL&s=advanced\" target=\"_blank\">link</a> | EO:EUM:DAT:SENTINEL-3:SR_2_WAT___ | <a href=\"https://www.wekeo.eu/data?view=dataset&dataset=EO%3AEUM%3ADAT%3ASENTINEL-3%3ASR_2_WAT___\" target=\"_blank\">link</a>|\n",
+    "| OSTIA SST (NRT) | - | - | EO:MO:DAT:SST_GLO_SST_L4_NRT_OBSERVATIONS_010_001 | <a href=\"https://www.wekeo.eu/data?view=dataset&dataset=EO%3AMO%3ADAT%3ASST_GLO_SST_L4_NRT_OBSERVATIONS_010_001\" target=\"_blank\">link</a> |\n",
+    "| GLOBCURRENT Total Surface Current | - | - | EO:MO:DAT:MULTIOBS_GLO_PHY_NRT_015_003 | <a href=\"https://www.wekeo.eu/data?view=dataset&dataset=EO%3AMO%3ADAT%3AMULTIOBS_GLO_PHY_NRT_015_003\" target=\"_blank\">link</a> |\n",
+    "\n",
     "\n",
     "### Learning outcomes\n",
     "\n",
@@ -899,6 +902,9 @@
   }
  ],
  "metadata": {
+  "author": "Ben Loveday, Hayley Evers-King",
+  "description": "This Jupyter Notebook.......",
+  "image": "../../../img/thumbs/Agulhas_variabilty_biophysical_interactions_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -915,7 +921,52 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  }
+  },
+  "services": {
+   "eumetsat": {
+    "binder": {
+     "link": "https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2ocean-case-studies/HEAD?urlpath=%2Ftree%2FCase_studies%2FOcean_phenomena%2FOcean_dynamics%2FWestern_boundary_currents%2FAgulhas_variabilty_biophysical_interactions%2FAgulhas_variabilty_biophysical_interactions.ipynb",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    },
+    "git": {
+     "link": "https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies/-/blob/main/Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    }
+   },
+   "wekeo": {
+    "git": {
+     "link": "https://github.com/wekeo/ocean-case-studies/blob/main/Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    },
+    "url": {
+     "link": "https://jupyterhub-wekeo.apps.eumetsat.dpi.wekeo.eu/hub/user-redirect/lab/tree/public/wekeo4oceans/ocean-case-studies/./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    }
+   }
+  },
+  "tags": {
+   "domain": "Marine",
+   "platform": [
+    "Sentinel-3",
+    "OSTIA",
+    "GLOBCURRENT"
+   ],
+   "sensor": [
+    "SRAL",
+    "Poseidon-4"
+   ],
+   "service": [
+    "EUMETSAT",
+    "CMEMS"
+   ],
+   "subtheme": "...",
+   "tags": "..."
+  },
+  "title": "...."
  },
  "nbformat": 4,
  "nbformat_minor": 4
