updated case studies

--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -546,7 +546,7 @@
  ],
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King, Marie Smith",
-  "description": "This Jupyter Notebook, part of our series on UN Ocean Decade challenges, shows you how map EUMETSAT Sentinel-3 Ocean and Land Colour Instrument (OLCI) level-2 chlorophyll products over a deoxygenation event in the Benguela region.",
+  "description": "This UN Ocean Decade challenge Jupyter Notebook, shows how map EUMETSAT Sentinel-3 OLCI level-2 chlorophyll products over a deoxygenation event in the Benguela region.",
   "image": "../../../img/thumbs/Deoxygenation_impacts_marine_life_benguela_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -604,7 +604,7 @@
    ],
    "tags": "Chlorophyll concentration"
   },
-  "title": "Exploring deoxgenation events with EUMETSAT Sentinel-3 OLCI chlorophyll products"
+  "title": "Exploring deoxygenation events with OLCI chlorophyll products"
  },
  "nbformat": 4,
  "nbformat_minor": 2
