--- a/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
@@ -11413,7 +11413,7 @@
  ],
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King, Vinca Rosmorduc",
-  "description": "This Jupyter Notebook, part of our series on UN Ocean Decade challenges, shows you how to map significant wave height from the EUMETSAT Sentinel-3 SAR Radar Altimeter (SRAL) and, optionally, the EUMETSAT Sentinel-6 Poseidon-4 altimeter.",
+  "description": "This UN Ocean Decade challenge Jupyter Notebook, demosntrates mapping significant wave height from the EUMETSAT Sentinel-3 and (optionally) Sentinel-6 SAR radar altimeters.",
   "image": "../../../img/thumbs/Tracking_tropical_cyclone_impacts_using_altimetry_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -11468,7 +11468,7 @@
    "subtheme": "Maritime safety",
    "tags": "Significant wave height"
   },
-  "title": "Visualise the impacts of tropical cyclones with the EUMETSAT Sentinel-3 SRAL and Sentinel-6 altimeters"
+  "title": "Visualising tropical cyclones impacts with Sentinel altimetry"
  },
  "nbformat": 4,
  "nbformat_minor": 4
