--- a/Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb
@@ -458,7 +458,7 @@
  ],
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King, Vinca Rosmorduc",
-  "description": "This Jupyter Notebook, ......",
+  "description": "This Notebook shows how to calculate mean seal level from Sentinel-6 full cycle",
   "image": "../../../img/thumbs/Quantifying_sea_level_rise_with_S6_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -513,7 +513,7 @@
    "subtheme": "Maritime safety",
    "tags": "Sea surface height"
   },
-  "title": "....."
+  "title": "Measuring sea level rise with Sentinel-6"
  },
  "nbformat": 4,
  "nbformat_minor": 4
