--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
@@ -884,7 +884,7 @@
  ],
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King",
-  "description": "This Jupyter Notebook, part of our series on UN Ocean Decade challenges, shows you how to investigate and visualise marine heatwaves using level-2 sea surface temperature (SST) product from the EUMETSAT Sentinel-3 Sea and Land Surface Temperature Radiometer (SLSTR) and global OSTIA level-4 SST products from the Copernicus Marine Service (CMEMS).",
+  "description": "This UN Ocean Decade challenge Jupyter Notebook, shows how to investigate marine heatwaves using EUMETSAT Sentinel-3 SLSTR and CMEMS OSTIA SST products.",
   "image": "../../../img/thumbs/Marine_heatwaves_intensification_threatens_coral_reef_health_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -946,7 +946,7 @@
    "subtheme": "Oceans and climate",
    "tags": "Sea surface temperature"
   },
-  "title": "Exploring marine heatwaves with EUMETSAT Sentinel-3 SLSTR and CMEMS OSTIA SST products"
+  "title": "Exploring marine heatwaves with Sentinel-3 SLSTR and CMEMS OSTIA SST"
  },
  "nbformat": 4,
  "nbformat_minor": 4
