--- a/Index.ipynb
+++ b/Index.ipynb
@@ -121,7 +121,7 @@
     "  * Challenge 04: Coming soon\n",
     "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry & Sentinel-6 altimetry**</font>)*\n",
-    "* [Challenge 07: Quantifying sea level rise with Sentinel-6](./Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry & Sentinel-6 altimetry**</font>)* << NOT FINALISED\n",
+    "* [Challenge 07: Quantifying sea level rise with Sentinel-6](./Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Coming_soon.md) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry & Sentinel-6 altimetry**</font>)* *(coming soon)*\n",
     "* Challenge 08: Coming soon\n",
     "* Challenge 09: Coming soon\n",
     "* Challenge 10: Coming soon\n",
@@ -129,10 +129,12 @@
     "\n",
     "2. <font color=\"#1F618D\">**Oceanographic phenomena**</font>\n",
     "  * **Coastal processes:** [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Linking_land_topography_with_altimetry_swh/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
-    "   * **Western boundary currents:** [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Agulhas_variabilty_biophysical_interactions.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*  << NOT FINALISED\n",
-    "   * **Basin scale variability:** [Sea surface temperature anomlies in the Northern Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_2023/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*  << NOT FINALISED\n",
-    "   * **Basin scale variability:** [Marine heatwaves in North Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_MHW_2023/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*  << NOT FINALISED\n",
-    "   * **Mesoscale variability:** [Mesoscale variability in the Alboran Gyre](./Case_studies/Ocean_phenomena/Ocean_dynamics/Mesoscale_variability/Mesoscale_variability_in_the_Alboran_Gyre/Mesoscale_variability_in_the_Alboran_Gyre.ipynb) (<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR SST**</font>)  << NOT FINALISED\n",
+    "   * **Western boundary currents:** [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Coming_soon.md) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*  *(coming soon)*\n",
+    "   * **Basin scale variability:** *(1/2)* [Sea surface temperature anomalies in the Northern Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "   * **Basin scale variability:** *(2/2)* [Marine heatwaves in North Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**OSTIA SST**</font>)*\n",
+    "   * **Mesoscale variability:** [Mesoscale variability in the Alboran Gyre](./Case_studies/Ocean_phenomena/Ocean_dynamics/Mesoscale_variability/Mesoscale_variability_in_the_Alboran_Gyre/Coming_soon.md) (<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR SST**</font>) *(coming soon)*\n",
+    "   * --\n",
+    "* <font color=\"#1E8449\">**Have ideas to contribute to this section? We'd love to hear them!**\n",
     "<br><br>"
    ]
   },
@@ -146,6 +148,9 @@
   }
  ],
  "metadata": {
+  "author": "Ben Loveday, Hayley Evers-King",
+  "description": "This repository provides case study examples using EUMETSAT Copernicus marine data",
+  "image": "../img/thumbs/Index_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -162,7 +167,76 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  }
+  },
+  "services": {
+   "eumetsat": {
+    "binder": {
+     "link": "https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?urlpath=%2Ftree%2FIndex.ipynb",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    },
+    "git": {
+     "link": "https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies/-/blob/main/Index.ipynb",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    }
+   },
+   "wekeo": {
+    "git": {
+     "link": "",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    },
+    "url": {
+     "link": "",
+     "service_contact": "ops@eumetsat.int",
+     "service_provider": "EUMETSAT"
+    }
+   }
+  },
+  "tags": {
+   "domain": "Marine",
+   "platform": [
+    "Sentinel-3",
+    "Sentinel-6",
+    "CMEMS"
+   ],
+   "sensor": [
+    "OLCI",
+    "SLSTR",
+    "SRAL",
+    "Poseidon-4",
+    "OSTIA",
+    "GLOBCURRENT"
+   ],
+   "service": [
+    "EUMETSAT",
+    "CMEMS"
+   ],
+   "subtheme": [
+    "Maritime safety",
+    "Ocean biogeochemistry",
+    "Ocean fluxes",
+    "Oceans and climate",
+    "Water quality"
+   ],
+   "tags": [
+    "Top-of-atmosphere radiance",
+    "Water leaving reflectance",
+    "Chlorophyll concentration",
+    "Photosynthetically active radiation",
+    "Diffuse attentuation coefficient",
+    "Coloured dissolved organic matter absorption coefficient",
+    "Total suspended matter concentration",
+    "Ocean colour",
+    "Sea surface temperature",
+    "Altimetry",
+    "Sea surface height",
+    "Significant wave height",
+    "Wind speed"
+   ]
+  },
+  "title": "Welcome to the EUMETSAT ocean-case-studies GitLab repository"
  },
  "nbformat": 4,
  "nbformat_minor": 4
