--- a/Index.ipynb
+++ b/Index.ipynb
@@ -54,10 +54,9 @@
     "\n",
     "### Module outline\n",
     "\n",
-    "Welcome to the **ocean-case-studies** module. This repository consists of a series of Jupyter Notebooks that either reflect one or more facets of a marine case study, as published on the EUMETSAT website, or focusses on a specific ocean region or oceanographic phenomenon. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors and/or how to use their data \n",
-    "in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>.\n",
+    "Welcome to the **ocean-case-studies** module. This repository consists of a series of Jupyter Notebooks that either reflect one or more facets of a marine case study, as published on the EUMETSAT website, or focusses on a specific ocean region or oceanographic phenomenon. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors to monitor ocean phenomena, and/or how to use their data in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>.\n",
     "\n",
-    "The list of case studies is every-growing and the Copernicus Marine Training Service aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
+    "The list of case studies is every-growing and the EUMETSAT Copernicus Marine Training Service aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
     "\n",
     "Case studies that align with the UN Ocean Decade priorities are organised according to the challenge they respond to. The list of challenges is below;\n",
     "\n",
@@ -131,10 +130,10 @@
     "  * **Coastal processes:** [Linking land topography with altimetry derived winds and significant wave height](./Case_studies/Ocean_phenomena/Coastal_processes/Linking_land_topography_with_altimetry_swh/Linking_land_topography_with_altimetry_swh.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
     "   * **Western boundary currents:** [Variability and biophysical interactions in the Agulhas Current](./Case_studies/Ocean_phenomena/Ocean_dynamics/Western_boundary_currents/Agulhas_variabilty_biophysical_interactions/Coming_soon.md) *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font> & <font color=\"#8E44AD\">**GLOBCURRENT velocity**</font>)*  *(coming soon)*\n",
     "   * **Basin scale variability:** *(1/2)* [Sea surface temperature anomalies in the Northern Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Atlantic_Med_SST_anomalies_2023.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
-    "   * **Basin scale variability:** *(2/2)* [Marine heatwaves in North Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Atlantic_Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**OSTIA SST**</font>)*\n",
+    "   * **Basin scale variability:** *(2/2)* [Marine heatwaves in North Atlantic and Mediterranean Sea in 2023](./Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb) *(<font color=\"#C0392B\">**OSTIA SST**</font>)*\n",
     "   * **Mesoscale variability:** [Mesoscale variability in the Alboran Gyre](./Case_studies/Ocean_phenomena/Ocean_dynamics/Mesoscale_variability/Mesoscale_variability_in_the_Alboran_Gyre/Coming_soon.md) (<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR SST**</font>) *(coming soon)*\n",
     "   * --\n",
-    "* <font color=\"#1E8449\">**Have ideas to contribute to this section? We'd love to hear them!**\n",
+    "* <font color=\"#1E8449\">**Do you have ideas to contribute to this section? We'd love to hear them!**\n",
     "<br><br>"
    ]
   },
