--- a/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
+++ b/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -416,17 +416,17 @@
      "output_type": "stream",
      "text": [
       "Number of heatwaves (NRT / max): 29\n",
-      "Number of heatwaves (NRT / common): 29\n",
-      "Number of heatwaves (NRT / recent): 29\n",
       "Number of heatwaves (MY / max): 79\n",
+      "Number of heatwaves (NRT / common): 29\n",
       "Number of heatwaves (MY / common): 30\n",
+      "Number of heatwaves (NRT / recent): 29\n",
       "Number of heatwaves (MY / recent): 30\n"
      ]
     }
    ],
    "source": [
-    "for tag in tags:\n",
-    "    for experiment in experiments:\n",
+    "for experiment in experiments:\n",
+    "    for tag in tags:\n",
     "        heatwaves[tag][experiment][\"n_events\"] = len(heatwaves[tag][experiment][\"mhws\"][\"event\"])\n",
     "        print(f'Number of heatwaves ({tag} / {experiment}): {heatwaves[tag][experiment][\"n_events\"]}')"
    ]
@@ -438,7 +438,7 @@
     "Already here, we can start to see differences.\n",
     "* In the **max** case, this is expected due to the differences in the time period used.\n",
     "* However, in the common period, we identify one more heatwave in the **reprocessed** data than we do in the **operational** data.\n",
-    "* Comparing the **NRT / common** and **NRT / recent** experiments shows that we have identified no new heatwaves in the period to date than in the 2007 to 2020 common period.\n",
+    "* Comparing the **NRT / common** and **NRT / recent** experiments shows that we have identified no new heatwaves in the period to date than in the 2007 to 2020 common period. Why would this be?!\n",
     "\n",
     "Lets look at these heatwaves in more detail, plotting them in time."
    ]
