--- a/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
+++ b/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
@@ -168,7 +168,7 @@
     "To start, lets define a few parameters that will determine how we run our Jupyter Notebook. We will begin by defining the directory where our time series is stored. If you don't have a time series of data, you should look at the previous notebook, **<a href=\"../../Atlantic_Med_SST_anomalies_2023.ipynb\" target=\"_blank\">Sea surface temperature anomalies in the Northern Atlantic and Mediterranean Sea in 2023</a>**, which will acquire some for you.\n",
     "\n",
     "We are going to look at two times series; one derived from Copernicus Marine Service (CMEMS) multi-year (\"my\") **reprocessed** products, and one from near real-time (\"nrt\") **operational** products. Below we define the tags used to reference the data. We are going to look at three experiments;\n",
-    "* defining heatwaves using the **maximum** length of record to define the climatology in each case (1982 - 2023)\n",
+    "* defining heatwaves using the **maximum** length of record to define the climatology in each case\n",
     "* defining heatwaves using the **common** period of our data (2007 - 2020)\n",
     "* defining heatwaves using the most **recent** years of our data from 2007 onwards\n",
     "\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
